fix spacing antara title di block kolom

--- a/css/style.css
+++ b/css/style.css
@@ -569,8 +569,10 @@ div.view-id-issue h3 {
   div.view-id-issue h3 p {
     padding: 0;
     margin: 0; }
-div.view-id-issue h4.row-title {
+
+h4.row-title {
   margin-bottom: 5px; }
+
 div.view-perusahaan .row-container {
   background-color: #FFF;
   margin-bottom: 20px; }
@@ -597,7 +599,7 @@ div.view-perusahaan .row-container {
   text-transform: uppercase; }
 
 p.row-info {
-  margin: 0 0 10px 0; }
+  margin: 0 0 5px 0; }
 
 
 .row-thumb {
